2008-05-08  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/flv/flv_wizard.py:
	* flumotion/component/encoders/flv/vp6_wizard.py:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	glade_file -> gladeFile and section_name -> sectionName

2008-05-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/mp3/mp3.xml:
	  describe property

2008-05-06  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/flv/flv_wizard.py:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Update to latest wizard API

2008-04-18  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/mp3/mp3_wizard.py
	(MP3Step.worker_changed.checkElements): Add a message and check for 
	lame as well
	here.

2008-04-18  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Now when #923 is fixed, do the same here, reuse the hostname from
	the streamer

2008-04-17  Johan Dahlin  <johan@flumotion.com>

	* Makefile.am:
	* autoregen.sh:
	* pkg/debian-common/rules:
	* pkg/ubuntu-gutsy/changelog:
	* pkg/ubuntu-gutsy/control:
	Add initial ubuntu gutsy package

	* flumotion/component/plugs/flashhttp/Makefile.am:
	Install in the right location plugs/flashhttp instead of
	misc/flashhttpplug

2008-04-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/flv-wizard.glade:
	  Add kbit/s in the UI.

2008-03-06  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/flv/flv_wizard.py:
	* flumotion/component/encoders/flv/vp6_wizard.py:
	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Mark the wizard plugins with interfaces.
	Add a docstring,
	remove GPL header.

2008-02-29  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/flv/vp6_wizard.py:
	The steps should not be called windows media!

2008-02-25  Johan Dahlin  <johan@flumotion.com>
