@@ -2,7 +2,7 @@
 # vi:si:et:sw=4:sts=4:ts=4
 #
 # Flumotion - a streaming media server
-# Copyright (C) 2004,2005,2006 Fluendo, S.L. (www.fluendo.com).
+# Copyright (C) 2004,2005,2006,2008 Fluendo, S.L. (www.fluendo.com).
 # All rights reserved.
 
 # Licensees having purchased or holding a valid Flumotion Advanced
@@ -12,12 +12,12 @@
 
 # Headers in this file shall remain intact.
 
+from flumotion.common.i18n import gettexter, N_
+from flumotion.common.messages import Warning
 from flumotion.component import feedcomponent
 
-from flumotion.common import messages
+T_ = gettexter('flumotion-flash')
 
-N_ = messages.N_
-T_ = messages.gettexter('flumotion-flash')
 
 class MP3Encoder(feedcomponent.ParseLaunchComponent):
     checkTimestamp = True
@@ -42,7 +42,7 @@ class MP3Encoder(feedcomponent.ParseLaunchComponent):
         # wrong configs, we accept both and convert as needed
         if bitrate < 1000:
             # assume bitrate is specified in kbit/sec
-            m = messages.Warning(
+            m = Warning(
                 T_(N_("The configuration specifies the bitrate in kbit/sec "
                     "with a value of '%d'. "
                     "Please update the configuration and specify "
